GL/Projet_GL/src/test/deca/syntax/invalid/AvecObjet/new_manquant.deca
// Test : Oubli de parenthèse fermante pour le new
// But : détecter l'oubli de la parenthèse fermante pour le new
// Type d'erreur : erreur syntaxique
// Résultat attendu : no viable alternative at input 'newA(;'


class A{
   boolean val;
   int z;
   void f(int x,int y){
      this.z = x + y;  
   }
}

class B{
    A a = A();
}

{
    A a = new A(;
}